--- a/files/tran-trong-kim_nho-giao.html
+++ b/files/tran-trong-kim_nho-giao.html
@@ -2614,7 +2614,8 @@ này xin làm một chức tiểu tướng.<a href="#fn10" class="footnote-ref"
 id="fnref10" role="doc-noteref"><sup>10</sup></a></p>
 <p>-Còn Điểm thì làm sao?</p>
 <p>Tăng Điểm lúc ấy đang gảy cái đàn sắt, tiếng đàn thong thả và hòa
-nhã, bỏ đàn xuống, đứng dậy mà thưa: - Chí tôi khác hẳn ba anh kia.</p>
+nhã, bỏ đàn xuống, đứng dậy mà thưa:</p>
+<p>– Chí tôi khác hẳn ba anh kia.</p>
 <p>-Có ngại gì, chẳng qua người nào cũng nói chí người ấy cả.</p>
 <p>-Đến cuối mùa xuân, áo mùa xuân đã may xong, năm sáu người trạc độ
 hai mươi tuổi, sáu bảy đứa trẻ con, rủ nhau đi tắm sông Nghi, hóng gió
